--- a/DecisionNav/wwwroot/css/left-menu.css
+++ b/DecisionNav/wwwroot/css/left-menu.css
@@ -8,7 +8,7 @@
 /*@media only screen and (min-width:767px)*/
 .left-menu .mainmenu .collapse ul ul {
     top: 0px;
-    left: 100%;
+    left: 50%;
 }
 
 .left-menu.menu-area {
@@ -17,7 +17,7 @@
 
 /*@media only screen and (min-width:767px)*/
 .left-menu .mainmenu .collapse ul ul ul ul {
-    left: 100%;
+    left: 50%;
 }
 
 
@@ -27,6 +27,50 @@
 .navbar-expand-lg .navbar-nav .nav-link {
     padding: 0 1.25rem;
 }
+
+
+.top-menu   {
+    height: 2.8rem;
+}
+
+.top-menu .btn:hover {
+    background: #222;
+}
+
+.top-menu .navbar-nav li {
+    line-height:2.6;
+}
+
+.left-menu {
+    height: 2.8rem;
+}
+
+    .left-menu .btn:hover {
+        background: #222;
+    }
+
+    .left-menu .navbar-nav li {
+        line-height: 2.6;
+    }
+
+
+
+    .navbar-expand-lg .navbar-collapse {
+        display: -ms-flexbox !important;
+        display: flex !important;
+        -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+    }
+
+   .left-nav :not(.show).collapse {
+        display: block;
+    }
+
+
+
+
+
+
 
 
 
