--- a/DecisionNav/wwwroot/css/navbar.css
+++ b/DecisionNav/wwwroot/css/navbar.css
@@ -109,10 +109,12 @@
 
 @media only screen and (max-width: 767px) {
     .navbar-nav .show .dropdown-menu .dropdown-menu > li > a {
-        padding: 16px 15px 16px 35px
+        /*padding: 16px 15px 16px 35px;*/
+        padding-left: 2.5rem;
     }
 
     .navbar-nav .show .dropdown-menu .dropdown-menu .dropdown-menu > li > a {
-        padding: 16px 15px 16px 45px
+        /*padding: 16px 15px 16px 45px;*/
+        padding-left: 3.5rem;
     }
 }
