--- a/DecisionNav/wwwroot/css/left-menu.css
+++ b/DecisionNav/wwwroot/css/left-menu.css
@@ -87,4 +87,51 @@
 
 
 
+/*.dropdown-menu {
+    display: block;
+}
+
+.navbar-nav .dropdown-menu {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s;
+}
+
+    .navbar-nav .dropdown-menu.show {
+        max-height: 500px;
+    }*/
+
+
+
+.dropdown-submenu {
+    position: relative;
+}
+
+    .dropdown-submenu > a:after {
+        content: ">";
+        float: right;
+    }
+
+    .dropdown-submenu > .dropdown-menu {
+        top: 0;
+        left: 100%;
+        margin-top: 0px;
+        margin-left: 0px;
+    }
+
+    .dropdown-submenu:hover > .dropdown-menu {
+        display: block;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
 
